force-app/main/default/objects/Bundle_Components_Allocation__c/Bundle_Components_Allocation__c.object-meta.xml
<CustomObject>
    <label>Bundle Components Allocation</label>
    <nameField>
        <label>Bundle Components Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundle Components Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>