force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Allocation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Percentage__c</fullName>
    <label>Allocation Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>