force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Bundle_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Allocation__c</fullName>
    <label>Bundle Allocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>