force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Bundle_Allocation_Generic_Components__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Allocation_Generic_Components__c</fullName>
    <label>Bundle Allocation &amp; Generic Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>