force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Bundle_Components_Allocation_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Components_Allocation_Id__c</fullName>
    <description>Used to store component id of external system</description>
    <externalId>true</externalId>
    <label>Bundle Components Allocation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>