force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Class_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Class_Subtype__c</fullName>
    <label>Class Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>