force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Component_End_Date__c</fullName>
    <label>Component End Date</label>
    <type>Date</type>
</CustomField>