force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_has_any_allocation_update__c.field-meta.xml
<CustomField>
    <fullName>Component_has_any_allocation_update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Component has any allocation update?</label>
    <type>Checkbox</type>
</CustomField>