force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_SKU__c.field-meta.xml
<CustomField>
    <fullName>Component_SKU__c</fullName>
    <label>Component SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>