force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_sku_Parsed__c.field-meta.xml
<CustomField>
    <fullName>Component_sku_Parsed__c</fullName>
    <label>Component sku(Parsed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>