force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Component_Start_Date__c</fullName>
    <label>Component Start Date</label>
    <type>Date</type>
</CustomField>