force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_Status__c.field-meta.xml
<CustomField>
    <fullName>Component_Status__c</fullName>
    <description>This field is created as a part of CPQ22-5447</description>
    <label>Component Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>