force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Component_Version_Flag__c.field-meta.xml
<CustomField>
    <fullName>Component_Version_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Component Version Flag</label>
    <type>Checkbox</type>
</CustomField>