force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Generic_Components__c.field-meta.xml
<CustomField>
    <fullName>Generic_Components__c</fullName>
    <label>Generic Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>