force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Item_Category_Product_Level_Combo__c.field-meta.xml
<CustomField>
    <fullName>Item_Category_Product_Level_Combo__c</fullName>
    <label>Item Category Product Level Combo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>