force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>Level1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>