force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>Level2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>