force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Level3__c.field-meta.xml
<CustomField>
    <fullName>Level3__c</fullName>
    <label>Level3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>