force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to populate when Bundle Component record is being created</description>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Bundle Components Allocation</relationshipLabel>
    <relationshipName>Bundle_Components_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>