force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Product_Pillar_2_Component__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_2_Component__c</fullName>
    <label>Product Pillar 2(Component)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>