force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <description>Used to store the Product Code sent from Integration</description>
    <label>Product SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>