force-app/main/default/objects/Bundle_Components_Allocation__c/fields/Unique_Component_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Component_Id__c</fullName>
    <label>Unique Component Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>