force-app/main/default/objects/Bundle_Components_Allocation__c/fields/UOM_Subtype__c.field-meta.xml
<CustomField>
    <fullName>UOM_Subtype__c</fullName>
    <label>UOM Subtype</label>
    <length>255</length>
    <type>Text</type>
</CustomField>